test/corpus/echo.txt
================================================================================
Echo with expression
================================================================================

pub fn main() {
  echo 1
}

--------------------------------------------------------------------------------

(source_file
  (function
    (visibility_modifier)
    (identifier)
    (function_parameters)
    (block
      (echo
        (integer)))))

================================================================================
Echo with expression and message
================================================================================

pub fn main() {
  echo 1 as "message"
}

--------------------------------------------------------------------------------

(source_file
  (function
    (visibility_modifier)
    (identifier)
    (function_parameters)
    (block
      (echo
        (integer)
        (string
          (quoted_content))))))

================================================================================
Echo in pipeline
================================================================================

pub fn main() {
  []
  |> echo
  |> panic
}

--------------------------------------------------------------------------------

(source_file
  (function
    (visibility_modifier)
    (identifier)
    (function_parameters)
    (block
      (binary_expression
        (binary_expression
          (list)
          (pipeline_echo))
        (panic)))))

================================================================================
Echo in pipeline and message
================================================================================

pub fn main() {
  []
  |> echo as message
  |> panic
}

--------------------------------------------------------------------------------

(source_file
  (function
    (visibility_modifier)
    (identifier)
    (function_parameters)
    (block
      (binary_expression
        (binary_expression
          (list)
          (pipeline_echo
            (identifier)))
        (panic)))))

================================================================================
Echo last in pipeline
================================================================================

pub fn main() {
  []
  |> echo

  1
}

--------------------------------------------------------------------------------

(source_file
  (function
    (visibility_modifier)
    (identifier)
    (function_parameters)
    (block
      (binary_expression
        (list)
        (pipeline_echo))
      (integer))))

================================================================================
Echo precedence with pipes
================================================================================

pub fn main() {
  echo 1 |> 2
  3
}

--------------------------------------------------------------------------------

(source_file
  (function
    (visibility_modifier)
    (identifier)
    (function_parameters)
    (block
      (echo
        (binary_expression
          (integer)
          (integer)))
      (integer))))

================================================================================
Echo precedence with binop
================================================================================

pub fn main() {
  echo 1 + 2
  3
}

--------------------------------------------------------------------------------

(source_file
  (function
    (visibility_modifier)
    (identifier)
    (function_parameters)
    (block
      (echo
        (binary_expression
          (integer)
          (integer)))
      (integer))))
